tests/fixtures/diag_span_multiline_expr.stderr.expected
thread 'main' (2464573) panicked at src/lower.rs:1038:17:
diag_span_multiline_expr.sh2:2:11: try_run() must be bound via let (e.g., let r = try_run(...))
    print(try_run(
          ^
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
Error: diag_span_multiline_expr.sh2:2:11: try_run() must be bound via let (e.g., let r = try_run(...))
    print(try_run(
          ^